Subida de archivos y consulta

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-
+    <!--primer parametro opcional lleva ?(parametro) los siguientes parametros van con & ejemplo ?token=123&otroparamentro=123  -->
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5f909cf7f0a28e0dfc9d4474-513.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJVU0VSX1JPTEUiLCJlc3RhZG8iOnRydWUsImdvb2dsZSI6ZmFsc2UsIl9pZCI6IjVmOTA5ZDA4ZjBhMjhlMGRmYzlkNDQ3NiIsIm5vbWJyZSI6InRlc3QzIiwiZW1haWwiOiJ0ZXN0M0BnbWFpbC5jb20iLCJfX3YiOjB9LCJpYXQiOjE2MDQ2MzU5ODcsImV4cCI6MTYwNDgwODc4N30.EjxQAxzrtcGLcHS3LasKyHbz1A3zNiVgLXOh8O9uqHY"
+        alt="" width="400px" height="200px">
+ -->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
 
